# piam-ai-core

./: .gitignore  README.md  pyproject.toml  test_run.py
src/piam_ai_core/: cli.py  config.py  generator.py
src/piam_ai_core/prompts/: contao_dca.py
